--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "nodemon ./app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "brcypt": "^1.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "^1.6.3",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "update": "^0.7.4"
   }
 }
