--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "sequelize": "^6.15.1",
     "update": "^0.7.4",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
