--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "sequelize": "^6.15.1",
     "update": "^0.7.4",
     "validator": "^13.7.0"
   }
