--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "http-errors": "^1.8.1",
+    "method": "^2.0.0",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "override": "^0.0.1",
     "sequelize": "^6.15.1",
     "update": "^0.7.4",
     "validator": "^13.7.0"
