--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon ./app.js"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "brcypt": "^1.0.1",
     "cookie-parser": "~1.4.4",
